# LangTrader

./: .env  .env.example  .gitignore  Dockerfile.api  README.md  RUN_TESTS.md  docker-compose.yml  hyperliquidExchange.py  langtrader_pro_init.sql  main.py  market.py  pyproject.toml  server.py  utils.py
api/: server.py
database/: add_custom_prompts.sql  add_pnl_trigger.sql  equity.sql  init.sql  langtrader_2025-11-13_091443.sql  langtrader_2025-11-22_193411.sql  seed_test_data.sql  updata.sql
docs/: BACKTEST_GUIDE.md  CHANGELOG.md
docs/images/: README.md
examples/: multi_bot_runner.py  run_backtest.py  run_once.py
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useApi.ts  useWebSocket.ts
frontend/lib/: utils.ts
frontend/stores/: botStore.ts
frontend/types/: api.ts
scripts/: apply_migration.py
scripts/migrations/: 001_add_backtest_tables.sql  002_add_config_management.sql  003_add_debate_config.sql  004_add_quant_risk_config.sql  005_update_aggressive_strategy.sql  006_extend_risk_limits.sql  007_fix_debate_timeout.sql  009_unify_risk_config.sql  010_remove_deprecated_bot_fields.sql  011_update_debate_config.sql  012_update_risk_limits_defaults.sql
src/LangTrader/: config.py  db.py  hyperliquidExchange.py  market.py  market_sentiment.py  trader.py  utils.py
tests/: conftest.py  test_base_strategy.py  test_basic.py  test_batch_decision.py  test_bbu_strategy.py  test_config.py  test_config_manager.py  test_db.py  test_debate.py  test_decision_engine.py  test_ema_strategy.py  test_enhanced_mean_reversion_strategy.py  test_fee_calculator.py  test_fibonacci_strategy.py  test_hyperliquid.py  test_ichimoku_strategy.py  test_indicators.py  test_macd_strategy.py  test_market.py  test_market_metrics.py  test_mock_performance.py  test_mock_trader.py  test_quant_signal.py  test_rsi_strategy.py  test_server.py  test_state_models.py  test_support_resistance_strategy.py  test_trader.py  test_volatility_breakout_strategy.py  test_volume_strategy.py
tests/archive/: quick_test_fixes.py  test_pnl_calculation.py  verify_market_metrics_integration.py  verify_refactoring.py
tests/test_nodes/: __init__.py  test_execution_node.py  test_quant_filter_node.py
web/LangTrader/: index.html  package-lock.json  package.json
(+74 files in other folders)
