[project]
name = "simper-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.19",
    "eth-account>=0.13.7",
    "fastapi>=0.121.0",
    "feedparser>=6.0.12",
    "hyperliquid-python-sdk>=0.20.1",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.2",
    "langchain-deepseek>=1.0.1",
    "langchain-google-vertexai>=3.0.3",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "loguru>=0.7.3",
    "pandas-ta>=0.4.71b0",
    "psycopg2-binary>=2.9.11",
    "psycopg2-pool>=1.2",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "ta-lib>=0.6.8",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
