[project]
name = "langtarder-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.28",
    "jsonschema>=4.25.1",
    "langchain-anthropic>=1.3.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langsmith>=0.5.0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
]
